exports[`organization rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "name": "test-org",
  },
]
`;

exports[`organization rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "name": "test-org",
}
`;

exports[`organization rest endpoint should update model 1`] = `
Object {
  "__v": 0,
  "name": "updated name",
}
`;
